--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,14 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:url"                content="https://www.ioconto.org" />
+<meta property="og:type"               content="article" />
+<meta property="og:title"              content="ioConto" />
+<meta property="og:description"        content="Open Data per covid9" />
+<meta property="og:image"              content="https://www.ioconto.org/assets/mappa.png" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="ioConto - Open Data per Covid19"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -23,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>IoConto.org</title>
+    <title>IoConto</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
