added image jpg

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <meta property="og:type"               content="article" />
 <meta property="og:title"              content="ioConto" />
 <meta property="og:description"        content="Open Data per covid9" />
-<meta property="og:image"              content="https://www.ioconto.org/assets/mappa.png" />
+<meta property="og:image"              content="https://www.ioconto.org/assets/mappa.jpg" />
     <meta
       name="description"
       content="ioConto - Open Data per Covid19"
